# ida-settings

./: .gitignore  ida-plugin.json  ida_settings.py  pyproject.toml  readme.md  setup.py
.github/workflows/: python-publish.yml
ida_settings/: __init__.py  ida_settings.py  tests.py
ida_settings/ui/: ida_settings_viewer.py
plugin/: entrypoint.py  main.py
plugin/settings_editor/: controller.py  editors.py  model.py  view.py
src/ida_settings/: __init__.py  legacy.py
