[project]
name = "ida-settings"
version = "3.2.0"
description = "Fetch configuration values for IDA Pro plugins"
readme = "readme.md"
authors = [
    { name = "Willi Ballenthin", email = "wballenthin@hex-rays.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ida-hcli>=0.12.1"
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
